--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
 	text-align: center;
 	height: 100vh;
 	width: 100vw;	
@@ -11,9 +11,54 @@ body {
     padding: 3rem;
 }
 
+form {
+    text-align: center;
+}
+
+input, button {
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    width: 50%;
+    width: clamp(400px, 50%, 60%);
+    border: 0.1rem solid transparent;
+    border-radius: 5px;
+}
+
+form .field{
+    background-color: #f9f2f2;
+}
+
+
+form .field:focus {
+    background-color: #85fcfa23;
+}
+
+
+.btn{
+    background-color: #803bf7ce;
+    color: #fff;
+    line-height: 1rem;
+    cursor: pointer;
+}
+
+form .btn:hover,
+		form .btn:active {
+			background-color: #26cfcf;
+			border: 0.1rem solid #1F78B4;
+		}
+
 .container {
     background-color: rgba(240, 255, 255, 0.198);
     margin: 3rem auto;
     padding: 2rem;
+    width: clamp(500px, 50%, 60%);
+    height: 50%;
+    border-radius: 10px;
 
+}
+
+.container h1 {
+    color: rgba(2, 2, 162, 0.432);
+    font-size: 2rem;
+    margin: 2rem;
 }
