--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -2,16 +2,62 @@
     box-sizing: border-box;
 }
 
+
+nav {
+    overflow: hidden;
+    background-color: rgba(171, 25, 255, 0.221);
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */ 
+}
+nav h1{
+    position: absolute;
+    /* font-family: 'Comforter Brush', cursive; */
+    font-family: 'Noto Emoji', sans-serif;
+    font-size: 2rem; 
+    margin: 0 1rem 0 1rem;
+    color:rgb(196, 238, 245);
+    /* text-shadow: 2px 2px purple; */
+    text-shadow: 0px 0px 5px rgb(0, 174, 174);
+}
+.navbar_options { 
+    display: flex; 
+    justify-content: center;    
+  }
+  
+  /* Links inside the navbar */
+  .navbar_options a {
+    color: #f2f2f2;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  /* Change background on mouse-over */
+  .navbar_options a:hover {
+    background: rgba(121, 4, 247, 0.303);
+    color: rgb(254, 254, 254);
+  }
+  
+
 body {
     font-family: 'Roboto', sans-serif;
-	text-align: center;
+
 	height: 100vh;
-	width: 100vw;	
-    background-image: linear-gradient(to right top, #7607f5, #6033f7, #9d7cf7, #bda3fe, #a3effc, #51e0f3, #03caf7);    
-    padding: 3rem;
+	/* width: 100vw;	 */
+    background-size: cover;
+    background-attachment: fixed;
+    width:auto;
+    background-image: repeating-linear-gradient(to right top, #7607f5, #6033f7, #9d7cf7, #bda3fe, #a3effc, #51e0f3, #03caf7);
+    margin: 0px;
 }
 
-form {
+main {
+    
+    padding: 3rem;
+    text-align: center;
+}
+
+form {    
     text-align: center;
 }
 
@@ -49,11 +95,13 @@ form .btn:hover,
 
 .container {
     background-color: rgba(240, 255, 255, 0.198);
-    margin: 3rem auto;
+    margin: 10rem auto;
     padding: 2rem;
     width: clamp(500px, 50%, 60%);
     height: 50%;
     border-radius: 10px;
+    justify-content: center;
+    text-align: center;
 
 }
 
@@ -61,4 +109,5 @@ form .btn:hover,
     color: rgba(2, 2, 162, 0.432);
     font-size: 2rem;
     margin: 2rem;
+    text-align: center;
 }
