--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -1,67 +1,74 @@
-*{
+* {
     box-sizing: border-box;
 }
 
 
 nav {
     overflow: hidden;
-    background-color: rgba(171, 25, 255, 0.221);
-    position: fixed; /* Set the navbar to fixed position */
-    top: 0; /* Position the navbar at the top of the page */
-    width: 100%; /* Full width */ 
+    background-color: #0374694a;
+    position: fixed;
+    /* Set the navbar to fixed position */
+    top: 0;
+    /* Position the navbar at the top of the page */
+    width: 100%;
+    /* Full width */
 }
-nav h1{
+
+nav h1 {
     position: absolute;
     /* font-family: 'Comforter Brush', cursive; */
     font-family: 'Noto Emoji', sans-serif;
-    font-size: 2rem; 
+    font-size: 2rem;
     margin: 0 1rem 0 1rem;
-    color:rgb(196, 238, 245);
+    color: rgb(196, 238, 245);
     /* text-shadow: 2px 2px purple; */
     text-shadow: 0px 0px 5px rgb(0, 174, 174);
 }
-.navbar_options { 
-    display: flex; 
-    justify-content: center;    
-  }
-  
-  /* Links inside the navbar */
-  .navbar_options a {
+
+.navbar_options {
+    display: flex;
+    justify-content: center;
+}
+
+/* Links inside the navbar */
+.navbar_options a {
     color: #f2f2f2;
     padding: 14px 16px;
     text-decoration: none;
-  }
-  
-  /* Change background on mouse-over */
-  .navbar_options a:hover {
-    background: rgba(121, 4, 247, 0.303);
+}
+
+/* Change background on mouse-over */
+.navbar_options a:hover {
+    background: rgba(1, 86, 5, 0.303);
     color: rgb(254, 254, 254);
-  }
-  
+}
+
 
 body {
     font-family: 'Roboto', sans-serif;
-
-	height: 100vh;
-	/* width: 100vw;	 */
+    /* background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%); */
+    /* background-image: repeating-linear-gradient(to right top,  #473B7B 0%, #3584A7 51%, #30D2BE 100%); */
+    height: 100vh;
+    /* width: 100vw;	 */
     background-size: cover;
     background-attachment: fixed;
-    width:auto;
-    background-image: repeating-linear-gradient(to right top, #7607f5, #6033f7, #9d7cf7, #bda3fe, #a3effc, #51e0f3, #03caf7);
+    width: auto;
+    background-image: repeating-linear-gradient(to right top, #fbeaff, #ffe9f4, #ffebe9, #ffefe0, #fff5de, #f9f8df, #f2fbe2, #ebfde7, #e2faee, #def7f3, #def2f4, #e1edf2);
     margin: 0px;
 }
 
 main {
-    
+
     padding: 3rem;
     text-align: center;
 }
 
-form {    
+form {
     text-align: center;
 }
 
-input, button {
+input,
+button {
     padding: 0.5rem;
     margin-bottom: 1rem;
     width: 50%;
@@ -70,7 +77,7 @@ input, button {
     border-radius: 5px;
 }
 
-form .field{
+form .field {
     background-color: #f9f2f2;
 }
 
@@ -80,21 +87,21 @@ form .field:focus {
 }
 
 
-.btn{
-    background-color: #803bf7ce;
+.btn {
+    background-color: #037468cc;
     color: #fff;
     line-height: 1rem;
     cursor: pointer;
 }
 
-form .btn:hover,
-		form .btn:active {
-			background-color: #26cfcf;
-			border: 0.1rem solid #1F78B4;
-		}
+.btn:hover,
+.btn:active {
+    background-color: #26cfcf;
+    border: 0.1rem solid #1F78B4;
+}
 
 .container {
-    background-color: rgba(240, 255, 255, 0.198);
+    background-color: rgba(7, 98, 25, 0.152);
     margin: 10rem auto;
     padding: 2rem;
     width: clamp(500px, 50%, 60%);
@@ -106,8 +113,9 @@ form .btn:hover,
 }
 
 .container h1 {
-    color: rgba(2, 2, 162, 0.432);
+    color: rgba(245, 250, 251, 0.799);
     font-size: 2rem;
     margin: 2rem;
     text-align: center;
+    text-shadow: 0px 0px 2px rgb(1, 113, 113);
 }
