--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -72,7 +72,7 @@ button {
     padding: 0.5rem;
     margin-bottom: 1rem;
     width: 50%;
-    width: clamp(400px, 50%, 60%);
+    width: clamp(80%, 80%, 850px);
     border: 0.1rem solid transparent;
     border-radius: 5px;
 }
@@ -104,7 +104,7 @@ form .field:focus {
     background-color: rgba(7, 98, 25, 0.152);
     margin: 10rem auto;
     padding: 2rem;
-    width: clamp(500px, 50%, 60%);
+    width: clamp(300px, 90%, 900px); /* clamp(MIN, VAL, MAX) */
     height: 50%;
     border-radius: 10px;
     justify-content: center;
